--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -25,7 +25,7 @@
 						</div>
 						<div class="ui-grid-row">
 							<div class="ui-grid-col-4">
-								<p:commandButton styleClass="btnSocios" value="" action="/pages/SocioEmpresa.jsf"></p:commandButton>
+								<p:commandButton styleClass="btnSocios" value="" actionListener="#{homeBean.redirectSocios}"></p:commandButton>
 							</div>
 							<div class="ui-grid-col-4">
 								<p:commandButton styleClass="btnProjetos" value=""></p:commandButton>
