--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -7,7 +7,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui" >
 <h:head>
-<title>proFinance</title>
+<title>ProFinance</title>
 <link rel="shortcut icon" href="#{request.contextPath}/img/dinheiro32.png"  type="image/png"/>
 <style type="text/css">
    	.ui-widget, .ui-widget .ui-widget {    
