--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -30,7 +30,7 @@
 						</div>
 						<div class="ui-grid-row">
 							<div class="ui-grid-col-6">
-								<p:commandButton styleClass="btnHistoricos btnHomeInicio" value=""></p:commandButton>
+								<p:commandButton styleClass="btnOcorrencias btnHomeInicio" value="" actionListener="#{homeBean.redirectOcorrenciaProjeto}"></p:commandButton>
 							</div>	
 							<div class="ui-grid-col-6">
 								<p:commandButton styleClass="btnPlanilhas btnHomeInicio" value="" ></p:commandButton>
