--- a/src/main/webapp/pages/ProjetosEdit.xhtml
+++ b/src/main/webapp/pages/ProjetosEdit.xhtml
@@ -14,6 +14,15 @@
 			text-align:center !important;
 		}
 	</style>
+	
+    <script type="text/javascript">
+		$.blockUI({ message: '<h1><img src="#{request.contextPath}/img/loading.gif" /></h1>' });
+		$(document).ajaxStart($.blockUI);
+		$(document).ready(function(){
+			$.unblockUI();
+		});
+		
+	</script>
 		
 		<p:toolbar>
 			<f:facet name="left">
@@ -154,6 +163,10 @@
 		            </p:panelGrid>
 		        </p:rowExpansion>
 		    </p:dataTable>
+		    
+		    <p:blockUI block="dtDiaCorrido" trigger="dtDiaCorrido">
+		        <p:graphicImage value="/img/loading.gif"/>
+		    </p:blockUI>
 		
 		</p:panel>
 		
