--- a/src/main/webapp/homeMobile.xhtml
+++ b/src/main/webapp/homeMobile.xhtml
@@ -7,7 +7,9 @@
 <f:view renderKitId="PRIMEFACES_MOBILE" />
 	<ui:composition template="/templates/templateMobile.xhtml">
 		<ui:define name="content">
-		
+			<h:panelGrid style="text-align:center; margin-top:30%" width="100%">
+				<p:graphicImage value="/img/proFinance2.png"/>
+			</h:panelGrid>
 		</ui:define>
 	</ui:composition>
 </html>
