--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -34,7 +34,7 @@
 									onclick="PF('load').show()"	actionListener="#{homeBean.redirectOcorrenciaProjeto}"></p:commandButton>
 							</div>	
 							<div class="ui-grid-col-6">
-								<p:commandButton styleClass="btnPlanilhas btnHomeInicio" value="" ></p:commandButton>
+								<p:commandButton styleClass="btnSimulacoes btnHomeInicio" value="" ></p:commandButton>
 							</div>
 						</div>
 						
