--- a/src/main/webapp/pages/Indexador.xhtml
+++ b/src/main/webapp/pages/Indexador.xhtml
@@ -13,7 +13,7 @@
 			<f:facet name="left">
 				<h:panelGrid columns="4">
 					<p:spacer width="10px"/>
-					<p:graphicImage value="/img/socios64.png"/>
+					<p:graphicImage value="/img/indexador64.png"/>
 					<p:spacer width="10px"/>
 					<p:outputLabel value="Indexador" />
 				</h:panelGrid>
