--- a/src/main/webapp/pages/ProjetosEdit.xhtml
+++ b/src/main/webapp/pages/ProjetosEdit.xhtml
@@ -98,7 +98,7 @@
 	        
 	        <div class="ui-grid-row">
 	        	<div class="ui-grid-col-2">
-	        		<p:commandButton value="Gerar Planilha" actionListener="#{projetoBean.gerarPlanilha}" onclick="PF('load').show()"
+	        		<p:commandButton value="Atualizar" actionListener="#{projetoBean.gerarPlanilha}" onclick="PF('load').show()"
 		        		rendered="#{projetoBean.projetoSelect.id == null}"
 	        			oncomplete="PF('load').hide()" update="pnDadosInvestimento, formGeral" icon="ui-icon-document-b"/>
 	        	</div>
