--- a/src/main/webapp/pages/ProjetosEdit.xhtml
+++ b/src/main/webapp/pages/ProjetosEdit.xhtml
@@ -36,7 +36,7 @@
 					<p:graphicImage value="/img/projetos64.png"/>
 					<p:spacer width="10px"/>
 					<p:outputLabel value="Projetos" />
-					<p:commandButton value="Voltar" actionListener="#{projetoBean.redirecionarTela}"
+					<p:commandButton value="Voltar" actionListener="#{projetoBean.voltarTela}"
 						icon="ui-icon-circle-arrow-w" onclick="PF('load').show()"/>
 				</h:panelGrid>
 			</f:facet>
@@ -220,7 +220,20 @@
 			        </p:selectOneMenu>
 		        </div>
 			</div>
-			
+			<div class="ui-grid-row">
+			 	<div class="ui-grid-col-2">
+					<h:outputLabel value="Descrição: " for="itDescricao"/>
+				</div>
+		
+				<div class="ui-grid-col-6">
+					<p:inputText value="#{projetoBean.ocorrenciaSelect.descricao}" style="width:87%" id="itDescricao"/>
+		        </div>
+	        </div>
+
+			<p:fileUpload fileUploadListener="#{projetoBean.uploadFileOcorrencia}" skinSimple="true" mode="advanced" 
+				update="messages" fileLimit="1"
+				sizeLimit="5000000" allowTypes="/(\.|\/)(gif|jpe?g|png|pdf|doc|docx|txt)$/" auto="true" label="Adicionar" />
+
 			<f:facet name="footer">
 				<div class="ui-grid-row">
       					<div class="ui-grid-col-4" style="text-align:right">
