--- a/src/main/webapp/mobile/Indexador.xhtml
+++ b/src/main/webapp/mobile/Indexador.xhtml
@@ -45,7 +45,7 @@
                 </p:inputText>
             </pm:field>	
             <p:commandButton value="Salvar" actionListener="#{indexadorBean.salvarIndexadorMobile}" 
-            	update="@parent:messages, first:frmContent:dtListIndexador" />
+            	update="messages2, first:frmContent:dtListIndexador" />
 		
 		</ui:define>
 		
