--- a/src/main/webapp/mobile/SocioEmpresa.xhtml
+++ b/src/main/webapp/mobile/SocioEmpresa.xhtml
@@ -71,7 +71,7 @@
                 </p:inputText>
             </pm:field>	
             <p:commandButton value="Salvar" actionListener="#{socioEmpresaBean.salvarSocioEmpresaMobile}" 
-            	update="@parent:messages, first:frmContent:dtListSocioEmpresa" />
+            	update="first:frmContent:messages, first:frmContent:dtListSocioEmpresa" />
 		
 		</ui:define>
 		
