--- a/src/main/webapp/pages/Simulador.xhtml
+++ b/src/main/webapp/pages/Simulador.xhtml
@@ -48,7 +48,7 @@
 				</div>
 		
 				<div class="ui-grid-col-2">
-					<p:calendar id="dataFinal"  value="#{simuladorBean.projetoPadrao.dataFinalPrevista}"
+					<p:calendar id="dataFinal"  value="#{simuladorBean.projetoPadrao.dataFinalPrevistaNova}"
 	         			showOn="button" locale="pt" pattern="dd/MM/yyyy" mask="true" converter="#{primefacesCalendarConverter}" size="10"
 	         			disabled="#{simuladorBean.listProjetos.size() >0}"/>
 		        </div>
