--- a/src/main/webapp/pages/OcorrenciaProjeto.xhtml
+++ b/src/main/webapp/pages/OcorrenciaProjeto.xhtml
@@ -39,6 +39,9 @@
 				<p:column headerText="Projeto">
 					<h:outputText value="#{ocorrenciaProjeto.diaCorridoProjeto.projeto.nome}" />
 				</p:column>
+				<p:column headerText="Descrição">
+					<h:outputText value="#{ocorrenciaProjeto.descricao}" />
+				</p:column>
 				<p:column headerText="Dia" >
 					<h:outputText value="#{calendarToString.obterData(ocorrenciaProjeto.data)}" />
 				</p:column>
@@ -128,6 +131,17 @@
 				        </p:selectOneMenu>
 				 	</div>
 			 	</div>
+			 	<div class="ui-grid-row">
+			        <div class="ui-grid-col-2">
+						<h:outputLabel value="Descrição: " for="itDescricao"/>
+						<h:outputLabel value="*" style="color:red" />
+					</div>
+			
+					<div class="ui-grid-col-9">
+						<p:inputText value="#{ocorrenciaProjetoBean.ocorrenciaProjetoSelect.descricao}" style="width:83%" 
+							id="itDescricao"/>
+			        </div>
+		        </div>
     	 	</p:panel>
 			
 			<f:facet name="footer">
