--- a/src/main/webapp/mobile/ProjetosEdit.xhtml
+++ b/src/main/webapp/mobile/ProjetosEdit.xhtml
@@ -29,7 +29,7 @@
             	</pm:field>	
 	            <pm:field>
 	                <p:outputLabel value="Data Final: " for="dataFinal"></p:outputLabel>
-	                 <p:calendar id="dataFinal"  value="#{projetoBean.projetoSelect.dataFinalPrevista}"
+	                 <p:calendar id="dataFinal"  value="#{projetoBean.projetoSelect.dataFinalPrevistaNova}"
 	         			showOn="button" locale="pt" pattern="dd/MM/yyyy" mask="true" converter="#{primefacesCalendarConverter}" size="10"/>
 	            </pm:field>	
 			</p:panel>
