--- a/src/main/webapp/pages/OcorrenciaProjeto.xhtml
+++ b/src/main/webapp/pages/OcorrenciaProjeto.xhtml
@@ -51,7 +51,7 @@
 				<p:column headerText="Valor" >
 					<h:outputText value="#{ocorrenciaProjeto.valor}" converter="#{doubleConverterDinheiro}"/>
 				</p:column>
-				<p:column headerText="Sócio/Empresa" >
+				<p:column headerText="Investidor" >
 					<h:outputText value="#{ocorrenciaProjeto.socioEmpresa.nome}" />
 				</p:column>
 			</p:dataTable>
@@ -121,7 +121,7 @@
 		        </div>
 		        <div class="ui-grid-row">
 				 	<div class="ui-grid-col-2">
-				 		<h:outputLabel value="Sócio/Empresa: " for="srmSocioEmpresa"/>
+				 		<h:outputLabel value="Investidor: " for="srmSocioEmpresa"/>
 				 		<h:outputLabel value="*" style="color:red" />
 				 	</div>
 				 	<div class="ui-grid-col-9">
