--- a/src/main/webapp/pages/ProjetosEdit.xhtml
+++ b/src/main/webapp/pages/ProjetosEdit.xhtml
@@ -119,7 +119,7 @@
 			</p:commandButton>
 			
 			 <p:dataTable var="diaCorrido" value="#{projetoBean.projetoSelect.listDiasCorridosProjeto}"
-			 	id="dtDiaCorrido" rowIndexVar="rowIndex" scrollable="true" scrollHeight="600">
+			 	id="dtDiaCorrido" rowIndexVar="rowIndex" scrollable="true" scrollHeight="350">
 			 	
 		        <p:column style="width:16px">
 		            <p:rowToggler rendered="#{diaCorrido.listOcorrenciasProjeto.size() > 0}" />
@@ -134,6 +134,8 @@
 						style="width:80%" converter="#{indexadorConverter}" rendered="#{projetoBean.isDiaPrimeiroDiaCorrido(diaCorrido)}">
 						<f:selectItem noSelectionOption="true"/>
 			            <f:selectItems value="#{projetoBean.listIndexadorItens}" />
+			            <p:ajax event="change" listener="#{projetoBean.recalcularMudancaIndexadorMes(diaCorrido)}"
+			            	onstart="PF('load').show()" oncomplete="PF('load').hide()" update="dtDiaCorrido"></p:ajax>
 			        </p:selectOneMenu>
 			        
 		            <h:outputText value="#{diaCorrido.indexador.descricao}" id="indexadorDesc#{rowIndex}" rendered="#{projetoBean.isDiaPrimeiroDiaCorrido(diaCorrido) == false}"/>
